2003-05-23  Nathanael Nerode  <neroden@gcc.gnu.org>

	* win32-host.c: Normalize copyright boilerplate.

2003-05-16  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>

	* parse.y (print_int_node): Use string concatentation on
	HOST_WIDE_INT_PRINT_* format specifier to collapse multiple
	function calls into one.

2003-05-13  Zack Weinberg  <zack@codesourcery.com>

	* jcf-parse.c, jcf-write.c, lex.c: Replace all calls to
	fatal_io_error with calls to fatal_error; add ": %m" to the end of
	all the affected error messages.

2003-05-13  Richard Henderson  <rth@redhat.com>

	* class.c (layout_class_method): Set DECL_EXTERNAL.
	* decl.c (java_mark_decl_local, java_mark_class_local): New.
	* java-tree.h (java_mark_class_local): Declare.
	* jcf-parse.c (parse_class_file): Use it.
	* parse.y (java_expand_classes): Likewise.

2003-05-04  Nathan Sidwell  <nathan@codesourcery.com>

	* Make-lang.in (java/parse.o, java/parse-scan.o): Depend on input.h.
	* lex.h: #include input.h.
	* jv-scan.c (input_filename): Remove.

2003-05-02  Tom Tromey  <tromey@redhat.com>

	PR java/10491:
	* gjavah.c (HANDLE_INNERCLASSES_ATTRIBUTE): New macro.
	(handle_inner_classes): New function.

2003-05-01  Tom Tromey  <tromey@redhat.com>

	PR java/10459:
	* parse.y (finish_for_loop): Do nothing if update expression is a
	EXPR_WFL_NODE wrapping nothing.
	(java_complete_lhs) <COMPOUND_EXPR>: Likewise.

2003-05-02  Nathan Sidwell  <nathan@codesourcery.com>

	* lex.h (input_lineno): Remove declaration.
	* parse-scan.y: #include input.h.
	(input_filename): Remove declaration.
	(input_location): Add definition.
	(input_line): Remove definition.

2003-05-01  Nathan Sidwell  <nathan@codesourcery.com>

	* lex.h (lineno): Rename to ...
	(input_line): ... here
	* parse-scan.y (lineno): Rename to ...
	(input_line): ... here.
	(reset_report): Rename lineno to input_line.
	* check-init.c (check_init): Likewise.
	* class.c (push_class): Likewise.
	* decl.c (complete_start_java_method, end_java_method): Likewise.