@@ -1,3 +1,8 @@
+2003-06-05  Andrew Haley  <aph@redhat.com>
+
+	* resource.c (write_resource_constructor): Use expand_expr to
+	generate the address of the label attached to a resource.
+
 2003-05-23  Nathanael Nerode  <neroden@gcc.gnu.org>
 
 	* win32-host.c: Normalize copyright boilerplate.
